字符串常量池的分区位置测试